# TableTennis

./: .gitignore  CONTRIBUTING.md  README.md  benchmark_direct_services.py  benchmark_racket_services.py  benchmark_returns.py  generate_racket_benchmark_web.py  generate_return_videos.py  interactive_table_tennis.ipynb  pyproject.toml  racket_benchmark_viewer.html  racket_impact_explorer.ipynb  return_parameter_search.py  serve_return_search.ipynb  service_parameter_search.ipynb  service_parameter_search.py  table_tennis_simulation.py  test_return_simulation.py  test_service_parameter_search.py
archive/matlab/: TableTennisTests.mlx
archive/notebooks/: Golpes_de_tenis_de_mesa.ipynb
notebooks/: 01_direct_trajectory_explorer.ipynb  02_racket_impact_explorer.ipynb  03_service_parameter_search.ipynb  04_serve_return_search.ipynb
scripts/: setup_environment.ps1  validate_notebooks.py
src/table_tennis/: __init__.py  cli.py  constants.py  doctor.py  events.py  exchange.py  models.py  physics.py  rally.py  validation.py
src/table_tennis/benchmarks/: __init__.py  direct.py  racket.py  returns.py  videos.py
src/table_tennis/presets/: __init__.py  exercise_controls_ace.py  exercise_controls_low_arc.py  exercise_controls_pace_ace.py  exercises.py  returns.py  services.py
src/table_tennis/search/: __init__.py  exercises.py  retune_all.py  returns.py  (+1 more)
tests/: test_ace_physics.py  test_ace_retuning.py  test_environment_and_video_batches.py  test_exercise_viewer.py  test_exercises.py  test_package_structure.py  test_return_simulation.py  test_service_parameter_search.py
(+8 files in other folders)
